--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,31 @@
-version: '3.0'
+version: "3.9"
 
 services:
-  main:
-    container_name: main
+  api:
+    restart: always
     build:
-      context: .
+      context: ./api
+    container_name: aweb-api
+    ports:
+      - ${SERVER_PORT}:${SERVER_PORT}
+      - "9229:9229"
+
     env_file:
       - .development.env
-    volumes:
-      - .:/app
-      - /app/node_modules
-    ports:
-      - "5000:5000"
-      - "9229:9229"
     command: npm run start:dev
+
     depends_on:
       - postgres
-    restart: always
+
   postgres:
     container_name: postgres
     image: postgres:12
     env_file:
-      - .development.env
+      - ./api/.development.env
     environment:
       PG_DATA: /var/lib/postgresql/data
     ports:
-      - "5432:5432"
+      - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     volumes:
       - pgdata:/var/lib/postgresql/data
     restart: always
