--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY package*.json ./
 
-RUN npm install
+#RUN npm install
 
 ARG NODE_ENV
 RUN if [ "$NODE_ENV" = "development" ]; \
