--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,11 +1,15 @@
 FROM node:12.13-alpine
 WORKDIR /app
-COPY package*.json ./
+COPY package.json .
 ARG NODE_ENV
 RUN if [ "$NODE_ENV" = "development" ]; \
     then npm install; \
     else npm install --only=production; \
     fi
-COPY . ./
+COPY . .
+EXPOSE 3000
+CMD ["npm", "start"]
 
-RUN npm run build
+
+
+
