--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,6 +1,19 @@
 version: "3.9"
 
 services:
+  app:
+    ports:
+      - "3000:3000"
+    volumes:
+      - /app/node_modules
+      - ./app/src:/app/src:ro
+    env_file:
+      - .development.env
+    environment:
+      - NODE_ENV=development
+
+    command: npm run start:dev
+
   api:
     build:
       args:
