--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,18 @@
 version: "3.9"
 
 services:
+  app:
+    build:
+      args:
+        NODE_ENV: production
+    ports:
+      - "8080:80"
+    env_file:
+      - .production.env
+    environment:
+      - NODE_ENV=production
+    command: npm run start:prod
+
   api:
     build:
       args:
