--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:12.13-alpine
 WORKDIR /app
-COPY package.json .
+COPY package*.json .
 ARG NODE_ENV
 RUN if [ "$NODE_ENV" = "development" ]; \
     then npm install; \
