--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -7,8 +7,12 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "jsx": "preserve",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "jsx": "react-jsx",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "module": "esnext",
     "moduleResolution": "node",
     "noEmit": true,
@@ -20,8 +24,7 @@
     "sourceMap": true,
     "strict": true,
     "target": "es2018",
-    "baseUrl": "src/"
-  },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/"],
-  "exclude": ["node_modules"]
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "./"
+  }
 }
